created service page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,43 @@
 
+<div class="main-banner" id="top">
+  <video autoplay="" muted="" loop="" id="bg-video">
+      <source src="assets/images/1525135821.mp4" type="video/mp4">
+  </video>
+  <div class="video-overlay header-text">
+      <div class="caption">
+    <h1>One More Goal Pvt Ltd</h1>                     
+          <h6>We are Here To Help You</h6>
+          <h2>Find the perfect <em>Job</em></h2>
+          <div class="main-button">
+              <a href="/ContactUs" routerlink="ContactUs">Contact Us</a>
+          </div>
+      </div>
+  </div>
+</div>
+
+<!-- ----------------------------------------------------------------------------------  -->
+<div class="experience-fragment">
+  <div id="experiencefragment-38e916d038" class="value-prop-component">
+
+    <div id="value-prop" class="container">
+      <div class="grid-container">
+
+        <div class="main-container">
+          <div class="content-container">
+            <div class="text">
+              <h4>One More Goal helps companies modernize&nbsp;<a href=" " class="text-link">technology</a>, reimagine&nbsp;<a href="" class="text-link">processes</a>&nbsp;and transform&nbsp;<a href="" class="text-link">experiences</a>&nbsp;so they stay ahead in a fast-changing world.</h4>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+<!-- ----------------------------------------------------------------------------------  -->
 <div class="slideshow-container">
   <div class="slideshow">
       <div class="slide" style="background-image: url('https://images.pexels.com/photos/1632788/pexels-photo-1632788.jpeg?auto=compress&cs=tinysrgb&w=600');">
@@ -21,103 +60,6 @@
       </div>
     </div>
   </div>
-<!-- ----------------------------------------------------------------------- -->
-<div class="experience-fragment">
-    <div id="experiencefragment-38e916d038" class="value-prop-component">
-  
-      <div id="value-prop" class="container">
-        <div class="grid-container">
-  
-          <div class="main-container">
-            <div class="content-container">
-              <div class="text">
-                <h4>One More Goal helps companies modernize&nbsp;<a href=" " class="text-link">technology</a>, reimagine&nbsp;<a href="" class="text-link">processes</a>&nbsp;and transform&nbsp;<a href="" class="text-link">experiences</a>&nbsp;so they stay ahead in a fast-changing world.</h4>
-              </div>
-            </div>
-          </div>
-  
-        </div>
-      </div>
-  
-    </div>
-  </div>
- 
- <!-- ----------------------------------------------------------------------------------  -->
-  <div class="bg-image">  
- <div class="ctscontainerwidthcontrol container responsivegrid cog-container--col-one-1 bg-fixed aem-GridColumn aem-GridColumn--default--12">
-  <div id="container-e8b6b6a1f2" class="cmp-container-full">
-      <div class="cog-container">
-          <div class="text">
-              <div data-cmp-data-layer="{&quot;text-b27780bbed&quot;:{&quot;@type&quot;:&quot;cognizant-dot-com/components/extendedcore/text/v1/text&quot;,&quot;repo:modifyDate&quot;:&quot;2022-11-22T19:56:49Z&quot;,&quot;xdm:text&quot;:&quot;<h3><span class=\&quot;text-white\&quot;>Services</span></h3>\r\n&quot;}}" id="text-b27780bbed" class="cmp-text">
-                  <h3><span class="text-white">Services</span></h3>
-              </div>
-          </div>
-          <div class="bar-info">
-              <div class="cog-link-accordion-bar" data-component="cog-link-accordion-bar">
-                  <div class="row cog-container accordion-gradient">
-                      <div class="col-12">
-                          <div class="row position-relative text-white align-items-center p-1 bg-gradient-steps-0">
-                              <div class="col-12 col-md-4 col-lg-3 py-1 bd-r-accent">
-                                  <h5 class="text-white mb-0">Cloud Enablement</h5>
-                              </div>
-                              <div class="col ps-md-2">
-                                <div class="line"></div>
-                                  <p class="mb-0">
-                                      Intelligent Cloud mobilizes your organization with a next-generation cloud operating model that helps increase velocity and control.
-                                  </p>
-                              </div>
-                              <div class="col-auto text-end">
-                                  <a class="m-0 h5 stretched-link" href="https://www.cognizant.com/us/en/services/cloud-solutions" target="_self" aria-label="Cloud Enablement" data-cmp-data-layer="{&quot;bar-info-item-8f23756309&quot;:{&quot;xdm:trackingType&quot;:&quot;bar-info&quot;,&quot;xdm:location&quot;:&quot;Body&quot;,&quot;dc:description&quot;:&quot;Intelligent Cloud mobilizes your organization with a next-generation cloud operating model that helps increase velocity and control.&quot;,&quot;dc:title&quot;:&quot;Cloud Enablement&quot;,&quot;xdm:linkURL&quot;:&quot;/content/cognizant-dot-com/us/en/services/cloud-solutions&quot;}}" data-cmp-clickable="">
-                                      <span class="cmp-icon arrow-right"></span>
-                                  </a>
-                              </div>
-                          </div>
-
-
-                          <div class="row position-relative text-white align-items-center p-1 bg-gradient-steps-0">
-                            <div class="col-12 col-md-4 col-lg-3 py-1 bd-r-accent">
-                                <h5 class="text-white mb-0">Cloud Enablement</h5>
-                            </div>
-                            <div class="col ps-md-2">
-                              <div class="line"></div>
-                                <p class="mb-0">
-                                    Intelligent Cloud mobilizes your organization with a next-generation cloud operating model that helps increase velocity and control.
-                                </p>
-                            </div>
-                            <div class="col-auto text-end">
-                                <a class="m-0 h5 stretched-link" href="https://www.cognizant.com/us/en/services/cloud-solutions" target="_self" aria-label="Cloud Enablement" data-cmp-data-layer="{&quot;bar-info-item-8f23756309&quot;:{&quot;xdm:trackingType&quot;:&quot;bar-info&quot;,&quot;xdm:location&quot;:&quot;Body&quot;,&quot;dc:description&quot;:&quot;Intelligent Cloud mobilizes your organization with a next-generation cloud operating model that helps increase velocity and control.&quot;,&quot;dc:title&quot;:&quot;Cloud Enablement&quot;,&quot;xdm:linkURL&quot;:&quot;/content/cognizant-dot-com/us/en/services/cloud-solutions&quot;}}" data-cmp-clickable="">
-                                    <span class="cmp-icon arrow-right"></span>
-                                </a>
-                            </div>
-                        </div>
-
-
-                        <div class="row position-relative text-white align-items-center p-1 bg-gradient-steps-0">
-                          <div class="col-12 col-md-4 col-lg-3 py-1 bd-r-accent">
-                              <h5 class="text-white mb-0">Cloud Enablement</h5>
-                          </div>
-                          <div class="col ps-md-2">
-                            <div class="line"></div>
-                              <p class="mb-0">
-                                  Intelligent Cloud mobilizes your organization with a next-generation cloud operating model that helps increase velocity and control.
-                              </p>
-                          </div>
-                          <div class="col-auto text-end">
-                              <a class="m-0 h5 stretched-link" href="https://www.cognizant.com/us/en/services/cloud-solutions" target="_self" aria-label="Cloud Enablement" data-cmp-data-layer="{&quot;bar-info-item-8f23756309&quot;:{&quot;xdm:trackingType&quot;:&quot;bar-info&quot;,&quot;xdm:location&quot;:&quot;Body&quot;,&quot;dc:description&quot;:&quot;Intelligent Cloud mobilizes your organization with a next-generation cloud operating model that helps increase velocity and control.&quot;,&quot;dc:title&quot;:&quot;Cloud Enablement&quot;,&quot;xdm:linkURL&quot;:&quot;/content/cognizant-dot-com/us/en/services/cloud-solutions&quot;}}" data-cmp-clickable="">
-                                  <span class="cmp-icon arrow-right"></span>
-                              </a>
-                          </div>
-                      </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
-</div>
-
- <!-- ---------------------------------------------------------------------  -->
 
  <!-- ---------------------------------------------------------------------  -->
  <div class="background-image">
