--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,3 +1,84 @@
+<div class="background">
+    <div class="ctscontainerwidthcontrol container responsivegrid cog-container--col-two-6-6  rm-vertical-padding flex-equalheight aem-GridColumn aem-GridColumn--default--12">
+       <div id="container-5a130a4156" class="cmp-container-full">
+           <div class="cog-container">
+               <div class="image" style="position: relative;">
+                   <div data-cmp-dmimage="" id="image-7577785616" data-cmp-data-layer="{...}" class="cmp-image" itemscope="" itemtype="http://schema.org/ImageObject">
+                       <img src="https://cognizant.scene7.com/is/image/cognizant/hp-recruitment-amf1-banner?fmt=png-alpha&amp;" loading="lazy" class="cmp-image__image" itemprop="contentUrl" width="580" height="324" alt="Recruitment top banner">
+                   </div>
+                   <h5 class="cmp-teaser__title">
+                    True to be Yourself
+                   </h5>
+                   <p>We are Hiring for the ASP.Net, Java Developer, Python, MY SQL .</p>
+               </div>
+           </div>
+       </div>
+   </div>
+   </div>
+
+   <div class="background2">
+    <div class="ctscontainerwidthcontrol container responsivegrid cog-container--col-two-6-6  rm-vertical-padding flex-equalheight aem-GridColumn aem-GridColumn--default--12">
+       <div id="container-5a130a4156" class="cmp-container-full">
+           <div class="cog-container">
+               <div class="image" style="position: relative;">
+                   <div data-cmp-dmimage="" id="image-7577785616" data-cmp-data-layer="{...}" class="cmp-image" itemscope="" itemtype="http://schema.org/ImageObject">
+                       <img src="https://cognizant.scene7.com/is/image/cognizant/hp-recruitment-amf1-banner?fmt=png-alpha&amp;" loading="lazy" class="cmp-image__image" itemprop="contentUrl" width="580" height="324" alt="Recruitment top banner">
+                   </div>
+                   <h5 class="cmp-teaser__title2">
+                    We are stepping stones of Your career
+                   </h5>
+                   <p>We give stepping Opportunities for your Career to reach Your Dream</p>
+               </div>
+           </div>
+       </div>
+   </div>
+   </div>
+   <div class="background3">
+    <div class="ctscontainerwidthcontrol container responsivegrid cog-container--col-two-6-6  rm-vertical-padding flex-equalheight aem-GridColumn aem-GridColumn--default--12">
+       <div id="container-5a130a4156" class="cmp-container-full">
+           <div class="cog-container">
+               <div class="image" style="position: relative;">
+                   <div data-cmp-dmimage="" id="image-7577785616" data-cmp-data-layer="{...}" class="cmp-image" itemscope="" itemtype="http://schema.org/ImageObject">
+                       <img src="https://cognizant.scene7.com/is/image/cognizant/hp-recruitment-amf1-banner?fmt=png-alpha&amp;" loading="lazy" class="cmp-image__image" itemprop="contentUrl" width="580" height="324" alt="Recruitment top banner">
+                   </div>
+                   <h5 class="cmp-teaser__title3">
+                    Go beyond expectations; that's how value finds its worth.
+                   </h5>
+                   <p>Passion fuels skill-building. Train, practice, seize opportunities, and reach goals.</p>
+               </div>
+           </div>
+       </div>
+   </div>
+   </div>
+<section class="continued-industry-orientation" id="industryOrientation">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12"> 
+          <h2 class="heading">Career Accelerator</h2>
+          <p class="text-center byline">OMG’s Career Accelerator offers real, and far-reaching career advancement to its program participants. At OMG, we are committed to helping participants connect, explore, and empower their future.</p>
+        </div>
+      </div>
+      <div class="row continued-inner">
+        <div class="col-md-4 col-sm-4 text-center">
+          <img src="https://static.talentsprint.com/ts_drupal/career-accelerator/images/expertise.webp" alt="kaggle logo">
+          <h3>Compelling Profile</h3>
+          <p>Build a compelling professional profile with a DeepTech edge (LinkedIn and Resume)</p>
+        </div>
+        <div class="col-md-4 col-sm-4 text-center">
+          <img src="https://static.talentsprint.com/ts_drupal/career-accelerator/images/profile.webp" alt="kaggle logo">
+          <h3>Priority Jobs Access</h3>
+          <p>Get priority access to career opportunities in the industry and 6 months membership of a premium job portal</p>
+        </div>
+        <div class="col-md-4 col-sm-4 text-center">
+          <img src="https://static.talentsprint.com/ts_drupal/career-accelerator/images/opprtunities.webp" alt="kaggle logo">
+          <h3>Elite Community</h3>
+          <p>Become a member of an exclusive community of DeepTech experts and lifetime access to our Alumni Portal, Alma Connect</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
 <div class="button backtotop aem-GridColumn aem-GridColumn--default--12">
     <button type="button" id="button-874ccc6547" class="cmp-button backtotop--show" (click)="scrollToTop()">
         <span class="cmp-button__text" routerLink="AboutUs">Back to top</span>
