--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="Home">
+    <a class="navbar-brand" routerLink="">
       <img class="logo" src="assets/images/logo.jpg">&nbsp;<i class="company-name">OneMoreGoal</i></a>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,6 +10,7 @@
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarColor01">
       <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" routerLink="">Home</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="AboutUs">About</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="Services">Services</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="DirectorProfile">Director</a></li>
