--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -183,6 +183,7 @@
   background-size: cover;
   background-position: center;
   padding: 20px;
+  margin-top: 20px;
 }
 .bar-info{
   background-color: transparent;
@@ -377,4 +378,69 @@ p{
 
 .cmp-button__text {
   font-size: 16px;
+}
+
+
+.main-banner {
+  position: relative;
+  width: 100%;
+  height: 600px; /* Set your desired height */
+  overflow: hidden;
+}
+
+#bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1; /* Place the video behind other content */
+}
+
+.video-overlay {
+  position: relative;
+  z-index: 1; /* Ensure content is above the video */
+  color: white;
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+  font-size: 24px;
+  padding-top: 100px; /* Adjust positioning of the overlay content */
+}
+.video-overlay h1 {
+  font-size: 48px; 
+  color: rgb(150, 160, 9);/* Adjust the header font size */
+}
+.video-overlay .caption {
+  max-width: 100%; /* Adjust the maximum width of the content */
+}
+.video-overlay h2 {
+  font-size: 90px;
+  margin: 0; /* Remove default margin */
+  white-space: nowrap;
+  color: rgb(150, 160, 9); /* Adjust the sub-header font size */
+}
+
+.video-overlay h6 {
+  font-size: 25px; /* Adjust the smaller text font size */
+}
+/* Additional styling for the overlay content */
+.video-overlay .caption {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+/* Style for the main button */
+.main-button a {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #1a0c41;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  margin-top: 20px;
 }
