--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -201,10 +201,10 @@ h5{
   font-size: 20px;
 }
 .line {
-  border-left: 1px solid #fff; /* Define the style of the vertical line */
-  height: 100%; /* Adjust the height of the line */
+  border-left: 1px solid #fff; 
+  height: 100%; 
   position: absolute;
-  left: 20%; /* Adjust the position of the line */
+  left: 20%; 
   top: 0;
   bottom: 0;
   margin: auto;
@@ -256,7 +256,7 @@ p{
 }
 
 .card {
-  width: calc(30% - 20px); /* Adjust as needed */
+  width: calc(30% - 20px); 
   height: 400px;
   border-radius: 10px;
   overflow: hidden;
@@ -287,7 +287,7 @@ p{
  }
 
 /* -------------------------------------------------------- */
- /* CSS for basic styling */
+
 .about-section {
   text-align: center;
   padding: 50px 0;
@@ -296,7 +296,7 @@ p{
 .image-container {
   display: flex;
   justify-content: center;
-  /* Add styles for images */
+
 }
 /* -------------------------------------------------------- */
 .slideshow-container {
@@ -337,11 +337,11 @@ p{
 }
 
 .slide:nth-child(2) {
-  animation-delay: 5s; /* Delay should be the total animation time */
+  animation-delay: 5s; 
 }
 
 .slide:nth-child(3) {
-  animation-delay: 10s; /* Delay should be double the total animation time */
+  animation-delay: 10s; 
 }
 
 @keyframes fade {
@@ -384,7 +384,7 @@ p{
 .main-banner {
   position: relative;
   width: 100%;
-  height: 600px; /* Set your desired height */
+  height: 600px;
   overflow: hidden;
 }
 
@@ -395,12 +395,12 @@ p{
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1; /* Place the video behind other content */
+  z-index: -1; 
 }
 
 .video-overlay {
   position: relative;
-  z-index: 1; /* Ensure content is above the video */
+  z-index: 1; 
   color: white;
   display: flex;
     flex-direction: column;
@@ -409,32 +409,32 @@ p{
     text-align: center;
     height: 100%;
   font-size: 24px;
-  padding-top: 100px; /* Adjust positioning of the overlay content */
+  padding-top: 100px; 
 }
 .video-overlay h1 {
   font-size: 48px; 
-  color: rgb(150, 160, 9);/* Adjust the header font size */
+  color: rgb(150, 160, 9);
 }
 .video-overlay .caption {
-  max-width: 100%; /* Adjust the maximum width of the content */
+  max-width: 100%; 
 }
 .video-overlay h2 {
   font-size: 90px;
-  margin: 0; /* Remove default margin */
+  margin: 0; 
   white-space: nowrap;
-  color: rgb(150, 160, 9); /* Adjust the sub-header font size */
+  color: rgb(150, 160, 9); 
 }
 
 .video-overlay h6 {
-  font-size: 25px; /* Adjust the smaller text font size */
+  font-size: 25px; 
 }
-/* Additional styling for the overlay content */
+
 .video-overlay .caption {
   max-width: 600px;
   margin: 0 auto;
 }
 
-/* Style for the main button */
+
 .main-button a {
   display: inline-block;
   padding: 10px 20px;
