modification for the backtotop

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -153,6 +153,6 @@
  <p>This site is protected by reCAPTCHA and the Google <a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a> and <a href="https://policies.google.com/terms" target="_blank">Terms of Service</a> apply.</p>
  <div class="button backtotop aem-GridColumn aem-GridColumn--default--12">
   <button type="button" id="button-874ccc6547" class="cmp-button backtotop--show" (click)="scrollToTop()">
-      <span class="cmp-button__text" routerLink="AboutUs">Back to top</span>
+      <span class="cmp-button__text" routerLink="Home">Back to top</span>
   </button>
 </div>
