--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -81,6 +81,6 @@
 
 <div class="button backtotop aem-GridColumn aem-GridColumn--default--12">
     <button type="button" id="button-874ccc6547" class="cmp-button backtotop--show" (click)="scrollToTop()">
-        <span class="cmp-button__text" routerLink="AboutUs">Back to top</span>
+        <span class="cmp-button__text" routerLink="Services">Back to top</span>
     </button>
   </div>
