--- a/src/app/director-profile/director-profile.component.html
+++ b/src/app/director-profile/director-profile.component.html
@@ -58,7 +58,7 @@
     </div>
     <div class="button backtotop aem-GridColumn aem-GridColumn--default--12">
       <button type="button" id="button-874ccc6547" class="cmp-button backtotop--show" (click)="scrollToTop()">
-          <span class="cmp-button__text" routerLink="AboutUs">Back to top</span>
+          <span class="cmp-button__text" routerLink="DirectorProfile">Back to top</span>
       </button>
     </div>
   </section>
